--- a/.themes/Rosepine-Dark-Moon/gtk-4.0/gtk.css
+++ b/.themes/Rosepine-Dark-Moon/gtk-4.0/gtk.css
@@ -23,7 +23,7 @@
  * Base States *
  ***************/
 .background {
-  background-color: transparent;
+  background-color: rgba(0,0,0,0);
   color: #faf4ed;
 }
 
