--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -20,10 +20,8 @@ box {
 #container,
 button {
 	min-width : 120px;
-	/* box-shadow: 0px 0px 20px black; */
+	color : #e0def4;
     border-radius: 20px;
-	text-decoration-color: #FFFFFF;
-    color: #FFFFFF;
 	background-color: #1f1d2e;
 	background-repeat: no-repeat;
 	background-position: center 50px;
